// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PromptField rendering tests PromptField - - hasName true - isUsed false - test 1`] = `
<div>
  <div
    class="rounded-lg border p-6 border-orange-200 bg-orange-50"
    data-testid="prompt-template-field"
  >
    <div
      class="mb-4 flex items-center justify-between"
      data-testid="header"
    >
      <div
        class="flex items-center gap-2"
      >
        <h4
          class="font-medium text-slate-900"
        >
          Feld 
          2
        </h4>
        <span
          class="flex items-center gap-1 rounded-full bg-orange-100 px-2 py-1 text-xs text-orange-800"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-alert h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="8"
              y2="12"
            />
            <line
              x1="12"
              x2="12.01"
              y1="16"
              y2="16"
            />
          </svg>
          Nicht verwendet
        </span>
      </div>
      <button
        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer"
        data-slot="button"
        data-testid="remove-btn"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-trash2 lucide-trash-2 h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 11v6"
          />
          <path
            d="M14 11v6"
          />
          <path
            d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
          />
          <path
            d="M3 6h18"
          />
          <path
            d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
          />
        </svg>
      </button>
    </div>
    <div
      class="grid grid-cols-2 gap-4"
    >
      <div
        class="grid gap-2"
        data-slot="form-item"
        data-testid="fields.1.name"
      >
        <label
          class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
          data-error="false"
          data-slot="form-label"
          for="_r_f_-form-item"
        >
          Name
        </label>
        <input
          aria-describedby="_r_f_-form-item-description"
          aria-invalid="false"
          class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive"
          data-slot="form-control"
          data-testid="input"
          id="_r_f_-form-item"
          name="fields.1.name"
          placeholder="Name des Feldes"
        />
        <p
          class="text-destructive text-sm"
          data-slot="form-message"
          id="_r_f_-form-item-message"
        >
          <span
            class="text-slate-500"
          >
            Verwenden Sie diesen Namen als {{feldname}}
          </span>
        </p>
      </div>
      <div
        class="grid gap-2"
        data-slot="form-item"
        data-testid="fields.1.label"
      >
        <label
          class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
          data-error="false"
          data-slot="form-label"
          for="_r_g_-form-item"
        >
          Label
        </label>
        <input
          aria-describedby="_r_g_-form-item-description"
          aria-invalid="false"
          class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive"
          data-slot="form-control"
          data-testid="input"
          id="_r_g_-form-item"
          name="fields.1.label"
          placeholder="Label des Feldes"
        />
        <p
          class="text-destructive text-sm"
          data-slot="form-message"
          id="_r_g_-form-item-message"
        >
          <span
            class="invisible text-sm"
          >
            .
          </span>
        </p>
      </div>
      <div
        class="grid gap-2"
        data-slot="form-item"
        data-testid="fields.1.type"
      >
        <label
          class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
          data-error="false"
          data-slot="form-label"
          for="_r_h_-form-item"
        >
          Typ
        </label>
        <button
          aria-autocomplete="none"
          aria-controls="radix-_r_i_"
          aria-describedby="_r_h_-form-item-description"
          aria-expanded="false"
          aria-invalid="false"
          class="border-input data-[placeholder]:text-muted-foreground [&_svg:not([class*='text-'])]:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 dark:hover:bg-input/50 flex items-center justify-between gap-2 rounded-md border bg-transparent px-3 py-2 text-sm whitespace-nowrap shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 data-[size=default]:h-9 data-[size=sm]:h-8 *:data-[slot=select-value]:line-clamp-1 *:data-[slot=select-value]:flex *:data-[slot=select-value]:items-center *:data-[slot=select-value]:gap-2 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 w-full"
          data-placeholder=""
          data-size="default"
          data-slot="form-control"
          data-state="closed"
          dir="ltr"
          id="_r_h_-form-item"
          role="combobox"
          type="button"
        >
          <span
            data-slot="select-value"
            style="pointer-events: none;"
          />
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down size-4 opacity-50"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </button>
        <div
          data-testid="mock-react-portal"
        />
      </div>
      <div
        class="grid gap-2"
        data-slot="form-item"
        data-testid="fields.1.defaultValue"
      >
        <label
          class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
          data-error="false"
          data-slot="form-label"
          for="_r_j_-form-item"
        >
          Standardwert
        </label>
        <input
          aria-describedby="_r_j_-form-item-description"
          aria-invalid="false"
          class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive"
          data-slot="form-control"
          data-testid="input"
          id="_r_j_-form-item"
          name="fields.1.defaultValue"
          placeholder="Standardwert des Feldes"
        />
      </div>
      <div
        class="grid gap-2 col-span-2"
        data-slot="form-item"
        data-testid="fields.1.description"
      >
        <label
          class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
          data-error="false"
          data-slot="form-label"
          for="_r_k_-form-item"
        >
          Beschreibung
        </label>
        <textarea
          aria-describedby="_r_k_-form-item-description"
          aria-invalid="false"
          class="border-input placeholder:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 flex field-sizing-content min-h-16 w-full rounded-md border bg-transparent px-3 py-2 text-base shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 md:text-sm"
          data-slot="form-control"
          data-testid="textarea"
          id="_r_k_-form-item"
          name="fields.1.description"
          placeholder="Beschreibung des Feldes"
          rows="2"
        />
      </div>
      <div
        class="grid gap-2 col-span-2"
        data-slot="form-item"
        data-testid="fields.1.required"
      >
        <div
          class="flex items-center space-x-2"
        >
          <button
            aria-checked="false"
            aria-describedby="_r_l_-form-item-description"
            aria-invalid="false"
            class="peer border-input dark:bg-input/30 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground dark:data-[state=checked]:bg-primary data-[state=checked]:border-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive size-4 shrink-0 rounded-[4px] border shadow-xs transition-shadow outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
            data-slot="form-control"
            data-state="unchecked"
            id="_r_l_-form-item"
            role="checkbox"
            type="button"
            value="on"
          >
            <div
              data-testid="mock-react-presence"
            >
              <span
                class="grid place-content-center text-current transition-none"
                data-slot="checkbox-indicator"
                data-state="unchecked"
                style="pointer-events: none;"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-check size-3.5"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 6 9 17l-5-5"
                  />
                </svg>
              </span>
            </div>
          </button>
          <label
            class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive cursor-pointer"
            data-error="false"
            data-slot="form-label"
            for="_r_l_-form-item"
          >
            Dieses Feld ist erforderlich
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PromptField rendering tests PromptField - hasName false - isUsed false - test 1`] = `
<div>
  <div
    class="rounded-lg border p-6 border-slate-200 bg-slate-50"
    data-testid="prompt-template-field"
  >
    <div
      class="mb-4 flex items-center justify-between"
      data-testid="header"
    >
      <div
        class="flex items-center gap-2"
      >
        <h4
          class="font-medium text-slate-900"
        >
          Feld 
          1
        </h4>
      </div>
      <button
        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer"
        data-slot="button"
        data-testid="remove-btn"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-trash2 lucide-trash-2 h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 11v6"
          />
          <path
            d="M14 11v6"
          />
          <path
            d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
          />
          <path
            d="M3 6h18"
          />
          <path
            d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
          />
        </svg>
      </button>
    </div>
    <div
      class="grid grid-cols-2 gap-4"
    >
      <div
        class="grid gap-2"
        data-slot="form-item"
        data-testid="fields.0.name"
      >
        <label
          class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
          data-error="false"
          data-slot="form-label"
          for="_r_0_-form-item"
        >
          Name
        </label>
        <input
          aria-describedby="_r_0_-form-item-description"
          aria-invalid="false"
          class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive"
          data-slot="form-control"
          data-testid="input"
          id="_r_0_-form-item"
          name="fields.0.name"
          placeholder="Name des Feldes"
        />
        <p
          class="text-destructive text-sm"
          data-slot="form-message"
          id="_r_0_-form-item-message"
        >
          <span
            class="text-slate-500"
          >
            Verwenden Sie diesen Namen als {{feldname}}
          </span>
        </p>
      </div>
      <div
        class="grid gap-2"
        data-slot="form-item"
        data-testid="fields.0.label"
      >
        <label
          class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
          data-error="false"
          data-slot="form-label"
          for="_r_1_-form-item"
        >
          Label
        </label>
        <input
          aria-describedby="_r_1_-form-item-description"
          aria-invalid="false"
          class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive"
          data-slot="form-control"
          data-testid="input"
          id="_r_1_-form-item"
          name="fields.0.label"
          placeholder="Label des Feldes"
        />
        <p
          class="text-destructive text-sm"
          data-slot="form-message"
          id="_r_1_-form-item-message"
        >
          <span
            class="invisible text-sm"
          >
            .
          </span>
        </p>
      </div>
      <div
        class="grid gap-2"
        data-slot="form-item"
        data-testid="fields.0.type"
      >
        <label
          class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
          data-error="false"
          data-slot="form-label"
          for="_r_2_-form-item"
        >
          Typ
        </label>
        <button
          aria-autocomplete="none"
          aria-controls="radix-_r_3_"
          aria-describedby="_r_2_-form-item-description"
          aria-expanded="false"
          aria-invalid="false"
          class="border-input data-[placeholder]:text-muted-foreground [&_svg:not([class*='text-'])]:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 dark:hover:bg-input/50 flex items-center justify-between gap-2 rounded-md border bg-transparent px-3 py-2 text-sm whitespace-nowrap shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 data-[size=default]:h-9 data-[size=sm]:h-8 *:data-[slot=select-value]:line-clamp-1 *:data-[slot=select-value]:flex *:data-[slot=select-value]:items-center *:data-[slot=select-value]:gap-2 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 w-full"
          data-placeholder=""
          data-size="default"
          data-slot="form-control"
          data-state="closed"
          dir="ltr"
          id="_r_2_-form-item"
          role="combobox"
          type="button"
        >
          <span
            data-slot="select-value"
            style="pointer-events: none;"
          />
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down size-4 opacity-50"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </button>
        <div
          data-testid="mock-react-portal"
        />
      </div>
      <div
        class="grid gap-2"
        data-slot="form-item"
        data-testid="fields.0.defaultValue"
      >
        <label
          class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
          data-error="false"
          data-slot="form-label"
          for="_r_4_-form-item"
        >
          Standardwert
        </label>
        <input
          aria-describedby="_r_4_-form-item-description"
          aria-invalid="false"
          class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive"
          data-slot="form-control"
          data-testid="input"
          id="_r_4_-form-item"
          name="fields.0.defaultValue"
          placeholder="Standardwert des Feldes"
        />
      </div>
      <div
        class="grid gap-2 col-span-2"
        data-slot="form-item"
        data-testid="fields.0.description"
      >
        <label
          class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
          data-error="false"
          data-slot="form-label"
          for="_r_5_-form-item"
        >
          Beschreibung
        </label>
        <textarea
          aria-describedby="_r_5_-form-item-description"
          aria-invalid="false"
          class="border-input placeholder:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 flex field-sizing-content min-h-16 w-full rounded-md border bg-transparent px-3 py-2 text-base shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 md:text-sm"
          data-slot="form-control"
          data-testid="textarea"
          id="_r_5_-form-item"
          name="fields.0.description"
          placeholder="Beschreibung des Feldes"
          rows="2"
        />
      </div>
      <div
        class="grid gap-2 col-span-2"
        data-slot="form-item"
        data-testid="fields.0.required"
      >
        <div
          class="flex items-center space-x-2"
        >
          <button
            aria-checked="false"
            aria-describedby="_r_6_-form-item-description"
            aria-invalid="false"
            class="peer border-input dark:bg-input/30 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground dark:data-[state=checked]:bg-primary data-[state=checked]:border-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive size-4 shrink-0 rounded-[4px] border shadow-xs transition-shadow outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
            data-slot="form-control"
            data-state="unchecked"
            id="_r_6_-form-item"
            role="checkbox"
            type="button"
            value="on"
          >
            <div
              data-testid="mock-react-presence"
            >
              <span
                class="grid place-content-center text-current transition-none"
                data-slot="checkbox-indicator"
                data-state="unchecked"
                style="pointer-events: none;"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-check size-3.5"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 6 9 17l-5-5"
                  />
                </svg>
              </span>
            </div>
          </button>
          <label
            class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive cursor-pointer"
            data-error="false"
            data-slot="form-label"
            for="_r_6_-form-item"
          >
            Dieses Feld ist erforderlich
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PromptField rendering tests PromptField - hasName true - isUsed true - test 1`] = `
<div>
  <div
    class="rounded-lg border p-6 border-green-200 bg-green-50"
    data-testid="prompt-template-field"
  >
    <div
      class="mb-4 flex items-center justify-between"
      data-testid="header"
    >
      <div
        class="flex items-center gap-2"
      >
        <h4
          class="font-medium text-slate-900"
        >
          Feld 
          6
        </h4>
        <span
          class="flex items-center gap-1 rounded-full bg-green-100 px-2 py-1 text-xs text-green-800"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-check h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="m9 12 2 2 4-4"
            />
          </svg>
          Im Content verwendet
        </span>
      </div>
      <button
        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer"
        data-slot="button"
        data-testid="remove-btn"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-trash2 lucide-trash-2 h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 11v6"
          />
          <path
            d="M14 11v6"
          />
          <path
            d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
          />
          <path
            d="M3 6h18"
          />
          <path
            d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
          />
        </svg>
      </button>
    </div>
    <div
      class="grid grid-cols-2 gap-4"
    >
      <div
        class="grid gap-2"
        data-slot="form-item"
        data-testid="fields.5.name"
      >
        <label
          class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
          data-error="false"
          data-slot="form-label"
          for="_r_u_-form-item"
        >
          Name
        </label>
        <input
          aria-describedby="_r_u_-form-item-description"
          aria-invalid="false"
          class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive"
          data-slot="form-control"
          data-testid="input"
          id="_r_u_-form-item"
          name="fields.5.name"
          placeholder="Name des Feldes"
        />
        <p
          class="text-destructive text-sm"
          data-slot="form-message"
          id="_r_u_-form-item-message"
        >
          <span
            class="text-slate-500"
          >
            Verwenden Sie diesen Namen als {{feldname}}
          </span>
        </p>
      </div>
      <div
        class="grid gap-2"
        data-slot="form-item"
        data-testid="fields.5.label"
      >
        <label
          class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
          data-error="false"
          data-slot="form-label"
          for="_r_v_-form-item"
        >
          Label
        </label>
        <input
          aria-describedby="_r_v_-form-item-description"
          aria-invalid="false"
          class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive"
          data-slot="form-control"
          data-testid="input"
          id="_r_v_-form-item"
          name="fields.5.label"
          placeholder="Label des Feldes"
        />
        <p
          class="text-destructive text-sm"
          data-slot="form-message"
          id="_r_v_-form-item-message"
        >
          <span
            class="invisible text-sm"
          >
            .
          </span>
        </p>
      </div>
      <div
        class="grid gap-2"
        data-slot="form-item"
        data-testid="fields.5.type"
      >
        <label
          class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
          data-error="false"
          data-slot="form-label"
          for="_r_10_-form-item"
        >
          Typ
        </label>
        <button
          aria-autocomplete="none"
          aria-controls="radix-_r_11_"
          aria-describedby="_r_10_-form-item-description"
          aria-expanded="false"
          aria-invalid="false"
          class="border-input data-[placeholder]:text-muted-foreground [&_svg:not([class*='text-'])]:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 dark:hover:bg-input/50 flex items-center justify-between gap-2 rounded-md border bg-transparent px-3 py-2 text-sm whitespace-nowrap shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 data-[size=default]:h-9 data-[size=sm]:h-8 *:data-[slot=select-value]:line-clamp-1 *:data-[slot=select-value]:flex *:data-[slot=select-value]:items-center *:data-[slot=select-value]:gap-2 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 w-full"
          data-placeholder=""
          data-size="default"
          data-slot="form-control"
          data-state="closed"
          dir="ltr"
          id="_r_10_-form-item"
          role="combobox"
          type="button"
        >
          <span
            data-slot="select-value"
            style="pointer-events: none;"
          />
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down size-4 opacity-50"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </button>
        <div
          data-testid="mock-react-portal"
        />
      </div>
      <div
        class="grid gap-2"
        data-slot="form-item"
        data-testid="fields.5.defaultValue"
      >
        <label
          class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
          data-error="false"
          data-slot="form-label"
          for="_r_12_-form-item"
        >
          Standardwert
        </label>
        <input
          aria-describedby="_r_12_-form-item-description"
          aria-invalid="false"
          class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive"
          data-slot="form-control"
          data-testid="input"
          id="_r_12_-form-item"
          name="fields.5.defaultValue"
          placeholder="Standardwert des Feldes"
        />
      </div>
      <div
        class="grid gap-2 col-span-2"
        data-slot="form-item"
        data-testid="fields.5.description"
      >
        <label
          class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
          data-error="false"
          data-slot="form-label"
          for="_r_13_-form-item"
        >
          Beschreibung
        </label>
        <textarea
          aria-describedby="_r_13_-form-item-description"
          aria-invalid="false"
          class="border-input placeholder:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 flex field-sizing-content min-h-16 w-full rounded-md border bg-transparent px-3 py-2 text-base shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 md:text-sm"
          data-slot="form-control"
          data-testid="textarea"
          id="_r_13_-form-item"
          name="fields.5.description"
          placeholder="Beschreibung des Feldes"
          rows="2"
        />
      </div>
      <div
        class="grid gap-2 col-span-2"
        data-slot="form-item"
        data-testid="fields.5.required"
      >
        <div
          class="flex items-center space-x-2"
        >
          <button
            aria-checked="false"
            aria-describedby="_r_14_-form-item-description"
            aria-invalid="false"
            class="peer border-input dark:bg-input/30 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground dark:data-[state=checked]:bg-primary data-[state=checked]:border-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive size-4 shrink-0 rounded-[4px] border shadow-xs transition-shadow outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
            data-slot="form-control"
            data-state="unchecked"
            id="_r_14_-form-item"
            role="checkbox"
            type="button"
            value="on"
          >
            <div
              data-testid="mock-react-presence"
            >
              <span
                class="grid place-content-center text-current transition-none"
                data-slot="checkbox-indicator"
                data-state="unchecked"
                style="pointer-events: none;"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-check size-3.5"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 6 9 17l-5-5"
                  />
                </svg>
              </span>
            </div>
          </button>
          <label
            class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive cursor-pointer"
            data-error="false"
            data-slot="form-label"
            for="_r_14_-form-item"
          >
            Dieses Feld ist erforderlich
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;
